# divoom-gaming-gate

./: .gitignore  README.md  index.html  main.js  main.py  main.spec  package-lock.json  package.json  pyproject.toml  render.js  requirements.txt  settings_dialog.py
.github/workflows/: macos.yaml  windows.yaml
app/: main.py
app/characters/: character_control.py
app/designer/: designer_tab.py
app/screens/: screen_control.py
app/settings/: settings_tab.py
app/themes/: themes_tab.py
app/utils/: config.py
characters/: character_control.py  characters_tab.py
designer/: designer_tab.py  document.py  editor.html  shape_item.py  shape_model.py
divoom_gaming_gate/: GamingGate.icns  main.py
divoom_gaming_gate/characters/: character_control.py  characters_tab.py
divoom_gaming_gate/data/themes/: Blank.theme
divoom_gaming_gate/designer/: designer_tab.py  editor.html
divoom_gaming_gate/screens/: screen_control.py  screens_tab.py
divoom_gaming_gate/settings/: settings.json  settings_tab.py
divoom_gaming_gate/themes/: themes_tab.py
divoom_gaming_gate/tools/: tools_tab.py
divoom_gaming_gate/utils/: paths.py
screens/: screen_control.py  screens_tab.py
settings/: settings.json  settings_tab.py
tools/: tools_tab.py
utils/: config.py  image.py
