[project]
name = "divoom-gaming-gate"
version = "0.1.11"
description = "A PyQt5-based character and screen manager for Divoom gaming devices."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyQt5",
    "PyQtWebEngine",
    "Pillow",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
divoom-gaming-gate = "app.main:main"

[tool.setuptools.package-data]
"app" = ["GamingGate.ico"]
"app.designer" = ["editor.html", "*.js", "*.css"]

